<resources>
    <string name="app_name">Scraper</string>
    <string name="selector_text_placeholder">Selector goes here</string>
    <string name="selector_label">Selector</string>
    <string name="link_text_placeholder">URL goes here</string>
    <string name="link_label">URL to parse</string>
    <string name="download_button_label">Download links</string>
    <string name="selector_hint">CSS Selector to match elements with</string>
    <string name="url_hint">URL To download / parse</string>
</resources>
